--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,20 @@ android {
         targetSdkVersion 25
         versionCode 4
         versionName "1.0"
+
+         ndk{
+             abiFilters "armeabi-v7a","arm64-v8a"
+         }
+
     }
+
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
