--- a/downloadlibrary/build.gradle
+++ b/downloadlibrary/build.gradle
@@ -64,5 +64,6 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.google.code.gson:gson:2.7'
     compile 'org.greenrobot:greendao:3.2.0'
+    compile 'com.orhanobut:logger:1.15'
 }
 
